@@ -21,7 +21,7 @@ type coeffects = No_coeffects | Has_coeffects
 
 let for_primitive (prim : Lambda.primitive) =
   match prim with
-  | Pignore | Pidentity -> No_effects, No_coeffects
+  | Pignore | Pidentity | Pbytes_to_string | Pbytes_of_string -> No_effects, No_coeffects
   | Pmakeblock _
   | Pmakearray (_, Mutable) -> Only_generative_effects, No_coeffects
   | Pmakearray (_, Immutable) -> No_effects, No_coeffects
@@ -63,7 +63,7 @@ let for_primitive (prim : Lambda.primitive) =
   | Pmulfloat
   | Pdivfloat
   | Pfloatcomp _ -> No_effects, No_coeffects
-  | Pstringlength
+  | Pstringlength | Pbyteslength
   | Parraylength _ ->
     No_effects, Has_coeffects  (* That old chestnut: [Obj.truncate]. *)
   | Pisint
@@ -92,6 +92,7 @@ let for_primitive (prim : Lambda.primitive) =
   | Pgetglobal _
   | Parrayrefu _
   | Pstringrefu
+  | Pbytesrefu
   | Pstring_load_16 true
   | Pstring_load_32 true
   | Pstring_load_64 true
@@ -102,6 +103,7 @@ let for_primitive (prim : Lambda.primitive) =
     No_effects, Has_coeffects
   | Parrayrefs _
   | Pstringrefs
+  | Pbytesrefs
   | Pstring_load_16 false
   | Pstring_load_32 false
   | Pstring_load_64 false
@@ -116,8 +118,8 @@ let for_primitive (prim : Lambda.primitive) =
   | Psetglobal _
   | Parraysetu _
   | Parraysets _
-  | Pstringsetu
-  | Pstringsets
+  | Pbytessetu
+  | Pbytessets
   | Pstring_set_16 _
   | Pstring_set_32 _
   | Pstring_set_64 _
